syntax = "proto3";

import "google/protobuf/empty.proto";

package nats_event_trigger;

option go_package = "github.com/sky-uk/kfp-operator/triggers/nats_event_trigger/proto/nats_event_trigger";

service NATSEventTrigger {
  rpc ProcessEventFeed(RunCompletionFeed) returns (google.protobuf.Empty) {};
}

message RunCompletionFeed {
  string spec_version = 1;
  string id = 2;
  string source = 3;
  string type = 4;
  string data_content_type = 5;
  RunCompletionEvent data = 6;
}

message RunCompletionEvent {
  string pipeline_name = 1;
  string provider = 2;
  string run_configuration_name = 3;
  string run_id = 4;
  string run_name = 5;
  repeated ServingModelArtifact serving_model_artifacts = 6;
  string status = 7;
}

message ServingModelArtifact {
  string location = 1;
  string name = 2;
}